Add : models and manage update